generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider            = "prisma-dbml-generator"
  output              = "../dbml"
  outputName          = "stay-permit.dbml"
  projectDatabaseType = "PostgreSQL"
  projectName         = "Stay Permit"
  projectNote         = "Stay Permit DB Schema"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model user {
  id           Int           @id @default(autoincrement())
  firstName    String
  lastName     String
  email        String        @unique
  phone        String        @unique
  password     String
  role         Role          @default(ADMIN)
  isActive     Boolean       @default(true)
  createdAt    DateTime      @default(now())
  updatedAt    DateTime      @updatedAt
  deletedAt    DateTime?     @db.Timestamp(6)
  username     String?       @unique
  companyId    Int?
  officeId     Int
  folder       folder[]
  profile      profile[]
  folderPrices folderPrice[]  
  companyFiles companyFile[]  

  @@index([email])
  @@index([createdAt])
  @@index([updatedAt])
}
model companyFile {
  id            Int         @id @default(autoincrement())
  userId Int
  name          String?
  file      String?
  createdAt     DateTime?   @db.Timestamp(6)
  updatedAt     DateTime?   @updatedAt @db.Timestamp(6)
  deletedAt     DateTime?   @db.Timestamp(6)
  user         user         @relation(fields: [userId], references: [id], onDelete: NoAction, onUpdate: NoAction, map: "fk_application")
}
model folder {
  id          Int           @id @default(autoincrement())
  userId      Int
  companyId   Int?
  comment     String?
  createdAt   DateTime      @default(now())
  updatedAt   DateTime      @updatedAt
  user        user          @relation(fields: [userId], references: [id])
  status      FolderRejectStatus  @default(PENDING)
  profile     profile[]
  folderPrice folderPrice[]
  number      number[]

  @@index([createdAt])
  @@index([updatedAt])
}

model folderPrice {
  id         Int       @id @default(autoincrement())
  userId     Int
  companyId  Int
  priceId    Int
  folderId   Int
  price      String
  name       String
  amount     Int
  total      Int
  createdAt  DateTime  @default(now())
  updatedAt  DateTime  @updatedAt
  user       user      @relation(fields: [userId], references: [id])
  folder     folder    @relation(fields: [folderId], references: [id])
  profile    profile[]

  @@index([createdAt])
  @@index([updatedAt])
}

model profile {
  id                 Int                @id @default(autoincrement())
  barcode            BigInt?
  firstName          String
  lastName           String
  phoneNumber        String?
  dateOfBirth        DateTime?
  gender             String
  nationalityId      Int
  ethnicityId        Int
  identityType       String?
  identityNumber     String?
  identityIssueDate  DateTime?
  identityExpiryDate DateTime?
  currentProvince    Int?
  currentDistrict    Int?
  currentVillageId   Int?
  overseasCountryId  Int?
  overseasProvince   String?
  createdAt          DateTime           @default(now())
  updatedAt          DateTime           @updatedAt
  deletedAt          DateTime?          @db.Timestamp(6)
  image              String?
  files              String?
  numberId           Int?
  userId             Int? 
  folderId           Int?
  companyId          Int? 
  folder             folder?            @relation(fields: [folderId], references: [id])
  user               user?              @relation(fields: [userId], references: [id])
  folderPrice        folderPrice?       @relation(fields: [folderPriceId], references: [id])
  folderPriceId      Int?
  profileFile       profileFile[]

  @@index([nationalityId])
  @@index([ethnicityId])
  @@index([currentProvince])
  @@index([currentDistrict])
  @@index([createdAt])
  @@index([updatedAt])
}

model profileFile {
  id            Int         @id @default(autoincrement())
  profileId     Int
  name          String?
  file      String?
  createdAt     DateTime?   @db.Timestamp(6)
  updatedAt     DateTime?   @updatedAt @db.Timestamp(6)
  deletedAt     DateTime?   @db.Timestamp(6)
  Profile      profile      @relation(fields: [profileId], references: [id], onDelete: NoAction, onUpdate: NoAction)
}
model number {
  id          Int       @id @default(autoincrement())
  number      String
  priceId     Int?
  folderId    Int
  isAvailable Boolean   @default(true)
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
  deletedAt   DateTime? @db.Timestamp(6)
  companyId   Int?
  folder      folder    @relation(fields: [folderId], references: [id])

  @@index([folderId])
  @@index([createdAt])
  @@index([updatedAt])
}
enum Gender {
  MALE
  FEMALE
  OTHER
}

enum Role {
  ADMIN
  USER  
  @@map("Role")
}
 
 
enum FolderRejectStatus {
  PENDING
  APPROVED
  REJECTED
  APPROVED_BY_POLICE
  REJECTED_BY_POLICE
}
 