//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "Stay Permit" {
  database_type: 'PostgreSQL'
  Note: 'Stay Permit DB Schema'
}

Table user {
  id Int [pk, increment]
  firstName String [not null]
  lastName String [not null]
  email String [unique, not null]
  phone String [unique, not null]
  password String [not null]
  role Role [not null, default: 'ADMIN']
  isActive Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  username String [unique]
  companyId Int
  officeId Int [not null]
  folder folder [not null]
  profile profile [not null]
  folderPrices folderPrice [not null]
  companyFiles companyFile [not null]
}

Table companyFile {
  id Int [pk, increment]
  userId Int [not null]
  name String
  file String
  createdAt DateTime
  updatedAt DateTime
  deletedAt DateTime
  user user [not null]
}

Table folder {
  id Int [pk, increment]
  userId Int [not null]
  companyId Int
  comment String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user user [not null]
  status FolderRejectStatus [not null, default: 'PENDING']
  profile profile [not null]
  folderPrice folderPrice [not null]
  number number [not null]
}

Table folderPrice {
  id Int [pk, increment]
  userId Int [not null]
  companyId Int [not null]
  priceId Int [not null]
  folderId Int [not null]
  price String [not null]
  name String [not null]
  amount Int [not null]
  total Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user user [not null]
  folder folder [not null]
  profile profile [not null]
}

Table profile {
  id Int [pk, increment]
  barcode BigInt
  firstName String [not null]
  lastName String [not null]
  phoneNumber String
  dateOfBirth DateTime
  gender String [not null]
  nationalityId Int [not null]
  ethnicityId Int [not null]
  identityType String
  identityNumber String
  identityIssueDate DateTime
  identityExpiryDate DateTime
  currentProvince Int
  currentDistrict Int
  currentVillageId Int
  overseasCountryId Int
  overseasProvince String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  image String
  files String
  numberId Int
  userId Int
  folderId Int
  companyId Int
  folder folder
  user user
  folderPrice folderPrice
  folderPriceId Int
  profileFile profileFile [not null]
}

Table profileFile {
  id Int [pk, increment]
  profileId Int [not null]
  name String
  file String
  createdAt DateTime
  updatedAt DateTime
  deletedAt DateTime
  Profile profile [not null]
}

Table number {
  id Int [pk, increment]
  number String [not null]
  priceId Int
  folderId Int [not null]
  isAvailable Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  companyId Int
  folder folder [not null]
}

Enum Gender {
  MALE
  FEMALE
  OTHER
}

Enum Role {
  ADMIN
  USER
}

Enum FolderRejectStatus {
  PENDING
  APPROVED
  REJECTED
  APPROVED_BY_POLICE
  REJECTED_BY_POLICE
}

Ref: companyFile.userId > user.id [delete: No Action]

Ref: folder.userId > user.id

Ref: folderPrice.userId > user.id

Ref: folderPrice.folderId > folder.id

Ref: profile.folderId > folder.id

Ref: profile.userId > user.id

Ref: profile.folderPriceId > folderPrice.id

Ref: profileFile.profileId > profile.id [delete: No Action]

Ref: number.folderId > folder.id